# tagatoni

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  tagatoni.service.example
.github/workflows/: check.yml  clippy.yml  deploy.yml  fmt.yml  test.yml
docs/: architecture.md  raspberry_setup.md
src/: main.rs
src/model/: recipe.rs
src/service/: gemini.rs  mailer.rs  mod.rs  mongo.rs  turso.rs
