[package]
name = "tagatoni"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
mongodb = "3.2.3"
libsql = { version = "0.9.30", features = ["remote"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
